--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Flowers</title>
+    <title>ASEKK</title>
 </head>
 <body>
     <div class="greetings">
@@ -14,16 +14,25 @@
         <span>H</span>
         <span>B</span>
         <span>D</span>
-        <span></span>
-        <span></span>
+    </div>
+
+    <div class="greetings">
+
+        <span>Z</span>
+        <span>H</span>
+        <span>R</span>
+        <span>A</span>
+    
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
-        <span>kamu azka kan ?</span>
+        <span>Asek nambah umur maap cuman bisa gini mwehe :v</span>
+    </div>
+    <div class="description">
+        <span>Nih di bawah hadiahnya pencet yakkk :3</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">pencet ini</a>
         </button>
         
     </div>
