--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     </div>
     <div class="description">
-        <span>Asek nambah umur maap cuman bisa gini mwehe :v</span>
+        <span>Asek nambah umur maap cuman bisa kasih ini :( </span>
     </div>
     <div class="description">
         <span>Nih di bawah hadiahnya pencet yakkk :3</span>
